discord_themes/addons/alky_SettingsPage.css
/*
:root{
    You must define these variables in your theme
    if you are using this as an add-on
    
    --nitro-bg-image: url(my_link);
    --nitro-bg-pos: left/right/center;
}
*/
/* Minimizes gaps between sections */
.sidebar-nqHbhN .header-2Kx1US{
    padding-top: 6px !important;
}
/* Decreases padding on each sidebar option */
.sidebar-nqHbhN .item-3XjbnG{
    padding-left: 10px !important;
}
/* Moves sidebar header and increase it font size*/
.sidebar-nqHbhN .header-2Kx1US{
    font-size: 15px;
    position: relative;
    left: -3px;
}
/* Removes lines in sidebar headers */
.sidebar-nqHbhN .header-2Kx1US:before{
    max-width: 0px;
}
.sidebar-nqHbhN .header-2Kx1US:after{
    background: transparent;
}
/* Removes separator lines between sections */
#app-mount .sidebarRegion-1VBisG .separator-2wx7h6{
    height: 0;
}
/* IMPROVED WHITESPACE USAGE */
#app-mount .standardSidebarView-E9Pc3j{
    --setting-sidebar-width: 260px;
}
#app-mount .sidebarRegion-1VBisG{
    flex-grow: 0;
    min-width: var(--setting-sidebar-width, 268px);
}
#app-mount .sidebarRegion-1VBisG .sidebarRegionScroller-FXiQOh {
    max-width: 100%;
}
#app-mount .contentRegion-3HkfJJ{
    max-width: calc(100% - var(--setting-sidebar-width, 268px));
}
#app-mount .contentRegion-3HkfJJ .contentTransitionWrap-1YD530,
#app-mount .contentRegion-3HkfJJ .contentTransitionWrap-1YD530 .contentRegionScroller-2_GT_N,
#app-mount .contentColumn-1C7as6{
  max-width: 100%;
}
#app-mount .contentColumn-1C7as6{
  padding: 60px 60px 80px 20px;
}
/* OPTION BOXES */
nav.sidebar-nqHbhN > div[class^="side-"] > div[class*="item-"]:hover{
    background: rgb(var(--main-color-numerical),0.3) !important;
    border-radius: 6px;
}
nav.sidebar-nqHbhN > div[class^="side-"] > div[class*="item-"]{
    border-radius: 10px; /*default: 4px*/
    /*option box corners*/
}
nav.sidebar-nqHbhN > div[class^="side-"] > div[class*="item-"]:before{
    opacity: 0.6 !important;
    /*Icons pop out more*/
}
nav.sidebar-nqHbhN > div[class^="side-"] > div[class*="item-"]{
    color: var(--interactive-normal) !important;
}
/* MY ACCOUNT */
#my-account-tab .accountProfileCard-lbN7n-{
    --avatar-change: 8.2vw;
    --adaptive-height: max(0vw, calc(var(--avatar-change) - 5.4vw));
    --avatar-size: calc(min(4.17vw, 80px) + var(--avatar-change,0px));
}
#my-account-tab .userInfo-regn9W{
    height: var(--adaptive-height);
}
  #my-account-tab .avatar-3mTjvZ{
    height: var(--avatar-size, 80px) !important; /*default: 80px*/
    width: var(--avatar-size, 80px) !important;
    top:  calc(100% - 100px - 2*var(--rs-medium-width) - 2*var(--rs-medium-spacing) - var(--avatar-change,0px)); /*default is 76px; value of x such that as --avatar-change increase, x decrease*/
}
#my-account-tab .userInfo-regn9W > button,
#my-account-tab .avatar-3mTjvZ+div{
    position: absolute;
    left: calc(var(--avatar-size, 80px) + 50px);
}
#my-account-tab .userInfo-regn9W > button{
    bottom: calc(10px + 0.5*var(--avatar-change,0px));
}
#my-account-tab .avatar-3mTjvZ+div{
    bottom: calc(45px + 0.5*var(--avatar-change,0px));
  
    width: 315px;
    max-width: 20%;
    /*width of username next to avatar*/
}
#my-account-tab .accountProfileCard-lbN7n- .background-3d_SjE{
    width: 40%;
    margin-left: 60%;
    margin-top: 16px;
    min-height: var(--avatar-change,0px);
}
#my-account-tab [class^="fieldList-"] [class*="fieldSpacer-"] span{
    filter: blur(5px);
    transition: 300ms;
    /*extra layer of security for email and phone*/
}
#my-account-tab [class^="fieldList-"] [class*="fieldSpacer-"] span:hover{
    filter: none;
    /*removes blur on hover*/
}
#my-account-tab .userSettingsSecurityImage-1ZkUEz{
    display: none;
    /*remove image next to Two-Factor Authentication paragraph*/
}
#my-account-tab .lookOutlined-3yKVGo.colorRed-rQXKgM:hover{
    background: var(--button-danger-background-hover, rgb(161, 47, 45));
    border: none;
    color: var(--button-outline-danger-text-hover);
    /*hover on Delete Account*/
}
/* Removes eye balls if your username is too long*/
.fieldList-in8WkP .field-21XZwa .button-f2h6uQ[aria-label="Edit username"] .contents-3ca1mk{
    text-indent: -9999px;
    line-height: 0;
}
.fieldList-in8WkP .field-21XZwa .button-f2h6uQ[aria-label="Edit username"] .contents-3ca1mk:after{
    text-indent: 0px;
    line-height: 1rem;
    display: block;
    content: "Edit";
}
/* PROFILES */
/* Removes Discord marketing crap */
#profile-customization-tab .upsellOverlay-3sCO8V > img,
#profile-customization-tab .upsellOverlay-3sCO8V > img+div,
/* Activity GIF removal*/
#profile-customization-tab .activityCharacterWumpus-31wmZ9,
#profile-customization-tab .activityCharacterPhibi-3dKc-8{
    display: none;
}
.upsellOverlayContainer-3NMgTS{
    background: linear-gradient(var(--background-primary),var(--background-primary)) padding-box,
    linear-gradient(45deg,var(--main-color), var(--main-color)) border-box;
}
/* Improved background of text box */
#profile-customization-tab .channelTextArea-1VQBuV {
    background: rgb(0,0,0,0.4);
    border: 2px solid var(--main-color);
}
/* SAFE DIRECT MESSAGING & VERIFICATION LEVEL */
#moderation-tab div[class*="children-"] > div:first-child > div[class*="children-"] div[role="radio"] > div {
    border-left: 5px solid var(--radio-bar-accent-color);
}
[class*="radioBar-"][style*="--radio-bar-accent-color:hsl(139, calc(var(--saturation-factor, 1) * 47.3%)"]{
    --radio-bar-accent-color: var(--online-color) !important;
}
[class*="radioBar-"][style*="--radio-bar-accent-color:hsl(38, calc(var(--saturation-factor, 1) * 95.7%), 54.1%)"]{
    --radio-bar-accent-color: var(--idle-color) !important;
}
[class*="radioBar-"][style*="--radio-bar-accent-color:hsl(21, calc(var(--saturation-factor, 1) * 90.7%), 57.6%)"]{
    --radio-bar-accent-color: var(--some-orange) !important;
}
/* ... */

